finished fv creation rewrite and ran some tests for size reduction

--- a/src/main/resources/spark.conf
+++ b/src/main/resources/spark.conf
@@ -2,3 +2,6 @@
 
 spark.master= local[*] # master
 name= JsonExplorer
+spark.driver.memory = 2g
+spark.driver.maxResultSize= 1g
+spark.driver.extraJavaOptions= -Xss10m
